--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="assets/logo.png">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -116,6 +117,27 @@
             </div>
             <img src="./assets/phone.png" alt="phone">
         </div>
+    </div>
+
+    <div class="stats">
+        <div class="statsContainer">
+            <div>
+                <h3>10</h3>
+                <p>Ans de Garantie</p>
+            </div>
+            <div>
+                <h3>30%</h3>
+                <p>De plus value sur votre bien</p>
+            </div>
+            <div>
+                <h3>80%</h3>
+                <p>D'économie</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="aides">
+
     </div>
 
 
