manque juste tableau

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
     </div>
 
-    <div class="butonTp">
+    <div class="butonTp butonTpUp">
         <p>Êtes vous éligible ? Découvrez le montant de vos aides ! </p>
         <a href="#headerTp">Vérifier Mon éligibilité</a>
     </div>
@@ -259,7 +259,7 @@
 
 
 
-    <div class="butonTp">
+    <div class="butonTp butonTpUp">
         <p>Êtes vous éligible ? Découvrez le montant de vos aides ! </p>
         <a href="#headerTp">Simuler mes aides</a>
     </div>
