--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <div class="section1">
         <div class="itemsFlexBox fade-text">
-            <div class="item">
+            <div class="item slide slideRight">
                 <h2>📝</h2>
                 <h3>Vérifiez votre éligibilité</h3>
                 <p>Remplissez notre formulaire simple pour savoir si vous pouvez bénéficier des aides</p>
@@ -126,7 +126,7 @@
                 <h3>Accompagnement personnalisé</h3>
                 <p>Un expert vous contacte et évalue vos besoins spécifiques</p>
             </div>
-            <div class="item">
+            <div class="item slide slideLeft">
                 <h2>🏠</h2>
                 <h3>Réalisation des travaux</h3>
                 <p>Nos artisans certifiés réalisent vos travaux de rénovation</p>
