modif text bouton click logo header et animation plus rapide

--- a/cgu.html
+++ b/cgu.html
@@ -14,7 +14,9 @@
         </div>
         <div class="header">
             <div class="EnergieFrance">
-                <img class="logoEnergieFrance" src="./assets/logo.png" alt="logo EnergieFrance">
+                <a href="index.html">
+                    <img class="logoEnergieFrance" src="./assets/logo.png" alt="logo EnergieFrance">
+                </a>
                 <div>
                     <h2>EnergieFrance</h2>
                     <p>N°1 des simulateurs en ligne</p>
