--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </div>
         <div class="header">
             <div class="EnergieFrance">
-                <img class="logoEnergieFrance" src="./assets/logo.png" alt="logo EnergieFrance">
+                <a href="index.html">
+                    <img class="logoEnergieFrance" src="./assets/logo.png" alt="logo EnergieFrance">
+                </a>
                 <div>
                     <h2>EnergieFrance</h2>
                     <p>N°1 des simulateurs en ligne</p>
@@ -76,7 +78,7 @@
                                 <span class="rFrJzc UpDOYb"></span>
                             </span>
                         </span>
-                        <h4>Basé sur 51 avis</h4>
+                        <h4>Basé sur 39 avis</h4>
                         <p>powered by
                         <span style="color:#6186ec!important">G</span><span style="color:#cd523f!important">o</span><span style="color:#eabe43!important">o</span><span style="color:#6186ec!important">g</span><span style="color:#63a45d!important">l</span><span style="color:#cd523f!important">e</span></p>
                     </div>
