--- a/pacForm/index.html
+++ b/pacForm/index.html
@@ -30,6 +30,14 @@
         src="https://www.facebook.com/tr?id=1759550834606885&ev=PageView&noscript=1"/>
     </noscript>
     <!-- End Meta Pixel Code -->
+
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "reqpwsmg2n");
+    </script>
 </head>
 <body>
     <header id="headerTp">
