--- a/pacForm/RatingSimulator.html
+++ b/pacForm/RatingSimulator.html
@@ -8,25 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="annimation.js" defer></script>
-
-    <!-- Meta Pixel Code -->
-    <!-- <script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '1575356153359987');
-        fbq('track', 'PageView');
-        </script>
-        <noscript><img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id=1575356153359987&ev=PageView&noscript=1"
-    /></noscript> -->
-    <!-- End Meta Pixel Code -->
-
+    <script src="script.js" defer></script>
 
     <style>
         #myLandbot {
@@ -40,18 +22,85 @@
             z-index: 2 !important;
         }   
 
+        .svgArrow {
+            position: relative;
+            /* margin-left: calc(50% - 28px); */
+            animation: floatArrow 2s ease-in-out infinite;
+            z-index: 10;
+        }
+
+
+        .arrowLinkage{
+            position: relative;
+            margin-left: calc(50% - 28px);
+            display: none;
+        }
+
+        @keyframes floatArrow {
+            0% { transform: translateX(calc(50% - 28px)) translateY(0); }
+            50% { transform: translateX(calc(50% - 28px)) translateY(8px); }
+            100% { transform: translateX(calc(50% - 28px)) translateY(0); }
+        }
+
+
         @media screen and (max-width: 782px) {
             #myLandbot {
                 top: -80px;
                 height: 90vh !important;
             }
+
+            .avisGoogle{
+                position: relative;
+                top: -32px !important;
+                margin-top: 0% !important;
+            }
+
+            .avisGoogleBody{
+                margin-top: 0% !important;
+                margin-bottom: 16px !important; 
+            }
+
+            .avisGoogleBody h2{
+                margin-top: 0% !important;
+            }
+
+            .arrowLinkage{
+                display: flex;
+                top: -60px;
+            }
         }
     </style>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const arrowLink = document.querySelector(".arrowLinkage");
+            const footer = document.querySelector("footer"); // Assure-toi que c’est bien un <footer>
+
+            // Disparition au clic
+            arrowLink.addEventListener("click", function () {
+                arrowLink.style.display = "none";
+            });
+
+            // Disparition quand le footer est visible
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        arrowLink.style.display = "none";
+                    }
+                });
+            });
+
+            if (footer) {
+                observer.observe(footer);
+            }
+        });
+    </script>
+
 </head>
 <body>
     <header id="headerTp">
         <div class="header-text">
-            <p>Jusqu'à 15 000€ d'aides sur l'isolation thermique extérieure</p>
+            <p>Jusqu'à 11 500€ d'aides pour votre pompe à chaleur</p>
         </div>
         <div class="header">
             <div class="EnergieFrance">
@@ -81,22 +130,14 @@
       });
     </script>
 
-    
+    <a href="#avisGoogle" class="arrowLinkage">
+        <svg id="svgArrow" class="svgArrow" width="56" height="56" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M6 9L12 15L18 9" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+    </a>
 
-    <div class="avis">
-        <div class="avisContainer fade-text">
-            <p>“J’ai simplement rempli un formulaire, et deux semaines plus tard, mon isolation thermique extérieure était en place, sans aucun frais à ma charge ! Ma maison bénéficie désormais d’un <span class="bold">meilleur confort acoustique et thermique qui améliore ma qualité de vie</span> au quotidien.”</p>
-            <div class="avisContainerFlexbox">
-                    <img src="./assets/man-having-video-call-with-his-family 1.png" alt="photoProfil">
-                <div>
-                    <h6>Remy G.</h6>
-                    <p>spécialiste auto</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="avisGoogle">
+    <div class="avisGoogle" id="avisGoogle">
         <div class="avisGoogleBody fade-text">
             <h2>NOS CLIENTS <br><span class="AvisTitre">PARLENT DE NOUS</span></h2>
             <div class="AvisBar"></div>
@@ -145,20 +186,6 @@
                 <div class="dot"></div>
             </div>            
         </div>
-    </div>
-
-    <div class="logoAides">
-        <div class="logoAidesContainer">
-            <img class="tva" src="./assets/tva.png" alt="Logo tva 5.5">
-            <img class="anha" src="./assets/anha.png" alt="Logo Anha">
-            <img class="mpr" src="./assets/Ma-prime-renov 1.png" alt="Logo ma prime renov">
-            <img class="tauxzero" src="./assets/taux0.jpg" alt="Logo pret taux 0">
-        </div>
-    </div>
-
-    <div class="butonTp butonTpUp">
-        <p>Êtes vous éligible ? Découvrez le montant de vos aides ! </p>
-        <a href="#tpbot">Vérifier Mon éligibilité</a>
     </div>
 
     <footer>
