--- a/IteVersionForm/RatingSimulator.html
+++ b/IteVersionForm/RatingSimulator.html
@@ -36,6 +36,19 @@
             display: none;
         }
 
+        .avisGoogle{
+            position: relative;
+            top: -100px !important;
+            margin-top: 0% !important;
+        }
+
+
+        .avisGoogleBody{
+            margin-top: 0% !important;
+            margin-bottom: 16px !important; 
+        }
+
+
         @keyframes floatArrow {
             0% { transform: translateX(calc(50% - 28px)) translateY(0); }
             50% { transform: translateX(calc(50% - 28px)) translateY(8px); }
@@ -133,7 +146,7 @@
     </header>
 
     <script SameSite="None; Secure"  type="module" src="https://cdn.landbot.io/landbot-3/landbot-3.0.0.mjs"></script>
-        <div id="myLandbot" style="width: 100%; height: 60vh"></div>
+        <div id="myLandbot" style="width: 100%; height: 80vh"></div>
         <script type="module">
         var myLandbot = new Landbot.Container({
             container: '#myLandbot',
