ajout page valid et bot PV

--- a/pacForm/RatingSimulator.html
+++ b/pacForm/RatingSimulator.html
@@ -116,7 +116,7 @@
         </div>
         <div class="header">
             <div class="EnergieFrance">
-                <a href="index.html">
+                <a href="RatingSimulator.html">
                     <img class="logoEnergieFrance" src="./assets/logo.png" alt="logo EnergieFrance">
                 </a>
                 <div>
@@ -151,7 +151,7 @@
     </a>
 
     <div class="avisGoogle" id="avisGoogle">
-        <div class="avisGoogleBody fade-text">
+        <div class="avisGoogleBody">
             <h2>NOS CLIENTS <br><span class="AvisTitre">PARLENT DE NOUS</span></h2>
             <div class="AvisBar"></div>
 
@@ -204,10 +204,10 @@
     <footer>
         <div class="footer">
             <a href="#headerTp" class="footer-link">EnergieFrance</a> - 
-            <a href="#" class="footer-link">Tous droits réservés</a> - 
-            <a href="mentionLegal.html" class="footer-link">Mentions légales</a> - 
-            <a href="politiqueConfidentialite.html" class="footer-link">Politique de confidentialité</a> - 
-            <a href="cgu.html" class="footer-link">CGU</a>
+            Tous droits réservés - 
+            <a href="RatingSimulatorAssets/mentionLegal.html" class="footer-link" target="_blank">Mentions légales</a> - 
+            <a href="RatingSimulatorAssets/politiqueConfidentialite.html" class="footer-link" target="_blank">Politique de confidentialité</a> - 
+            <a href="RatingSimulatorAssets/cgu.html" class="footer-link" target="_blank">CGU</a>
         </div>        
     </footer>
 </body>
