homepage sans responsiv

--- a/pv/politiqueConfidentialite.html
+++ b/pv/politiqueConfidentialite.html
@@ -14,19 +14,19 @@
         </div>
         <div class="header">
             <div class="EnergieFrance">
-                <a href="index.html">
+                <a href="Lp.html">
                     <img class="logoEnergieFrance" src="./assets/logo.png" alt="logo EnergieFrance">
                 </a>
                 <div>
                     <h2>EnergieFrance</h2>
-                    <p>N°1 des simulateurs en ligne</p>
+                    <p>N°1 des simulateurs</p>
                 </div>
             </div>
             <div class="logo">
                 <img class="logo1" src="./assets/Logo_de_la_République_française_(1999).png" alt="Logo République-Francaise">
                 <img class="logo4" src="./assets/Francerelance.png" alt="Logo France-Relance">
-                <img class="logo2" src="./assets/Ma-prime-renov.png" alt="Logo Ma-prime-renov">
                 <img class="logo3" src="./assets/France-renov_Logo.png" alt="Logo France-Renov">
+                <img class="logo2" src="./assets/comentaire.png" alt="comentaire">
             </div>
         </div>
     </header>
@@ -212,7 +212,7 @@
         <div class="footer">
             <a href="#headerTp" class="footer-link">EnergieFrance</a> - 
             <a href="#" class="footer-link">Tous droits réservés</a> - 
-            <a href="index.html" class="footer-link">accueil</a> - 
+            <a href="Lp.html" class="footer-link">accueil</a> - 
             <a href="mentionLegal.html" class="footer-link">Mentions légales</a> - 
             <a href="cgu.html" class="footer-link">CGU</a>
         </div>        
