--- a/pv/index.html
+++ b/pv/index.html
@@ -47,16 +47,6 @@
             }
         }
     </style>
-
-<!-- <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const arrowLink = document.querySelector(".arrowLinkage");
-        arrowLink.addEventListener("click", function () {
-            arrowLink.style.display = "none";
-        });
-    });
-</script> -->
-
   
 </head>
 <body>
@@ -66,7 +56,7 @@
         </div>
         <div class="header">
             <div class="EnergieFrance">
-                <a href="RatingSimulator.html">
+                <a href="index.html">
                     <img class="logoEnergieFrance" src="./assets/logo.png" alt="logo EnergieFrance">
                 </a>
                 <div>
@@ -91,15 +81,5 @@
             configUrl: 'https://storage.googleapis.com/landbot.pro/v3/H-2662724-IW80HTYQQQO54D5C/index.json',
         });
     </script>
-<!-- 
-    <footer>
-        <div class="footer">
-            <a href="#headerTp" class="footer-link">EnergieFrance</a> - 
-            Tous droits réservés - 
-            <a href="RatingSimulatorAssets/mentionLegal.html" class="footer-link" target="_blank">Mentions légales</a> - 
-            <a href="RatingSimulatorAssets/politiqueConfidentialite.html" class="footer-link" target="_blank">Politique de confidentialité</a> - 
-            <a href="RatingSimulatorAssets/cgu.html" class="footer-link" target="_blank">CGU</a>
-        </div>    
-    </footer> -->
 </body>
 </html>
