--- a/validation/validationPv/politiqueConfidentialite.html
+++ b/validation/validationPv/politiqueConfidentialite.html
@@ -10,7 +10,7 @@
 <body>
     <header id="headerTp">
         <div class="header-text">
-            <p>Jusqu'à 11 500€ d'aides pour votre pompe à chaleur</p>
+            <p>Jusqu'à 11 500€ d'aides sur vos panneaux photovoltaïques</p>
         </div>
         <div class="header">
             <div class="EnergieFrance">
