responsiv section home new fait

--- a/pv/Lp.html
+++ b/pv/Lp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,107 +58,14 @@
         <img src="./assets/banner2.png" alt="Installation de panneaux photovoltaïques">
         </div>
     </section>
-  <style>
-.bannerSection {
-  display: flex;
-  align-items: stretch;  /* enfants prennent toute la hauteur */
-  justify-content: space-between;
-  background-color: #fff;
-  height: 500px; /* ou min-height si tu veux */
-  box-sizing: border-box;
-  overflow: hidden; /* évite débordement global */
-}
 
-.banner-text {
-  flex: 1 1 400px;
-  max-width: 600px;
-  margin: 16px;
-  margin-left: 24px;
-  position: relative;
-  left: 100px;
-}
-
-    .banner-text h1 {
-      font-size: 32px;
-      margin-bottom: 24px;
-      margin-top: 0%;
-    }
-
-    .banner-text .highlight {
-        background: linear-gradient(to right, #ef7736, #f8b437);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text; /* Pour compatibilité */
-        color: transparent;    /* Fallback propre */
-        font-weight: bold;
-    }
-
-
-    .checklistChecked {
-      margin-top: 1rem;
-      padding: 0%;
-    }
-
-    .checklistChecked li {
-      list-style: none;
-      margin-bottom: 0.6rem;
-      font-size: 19px;
-      font-weight: 300;
-    }
-
-    .checklistChecked li::before {
-      content: "✅";
-      margin-right: 0.5rem;
-      color: green;
-    }
-
-    .cta-button {
-      display: inline-block;
-      margin-top: 1.5rem;
-      background-color: #2ecc71;
-      color: #fff;
-      padding: 0.75rem 1.5rem;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-    }
-
-    
-
-.banner-img {
-  flex: 1 1 50%;
-  height: 100%;      /* prend la hauteur de bannerSection */
-  display: flex;
-  overflow: hidden;  /* cache les débordements */
-}
-
-.banner-img img {
-  height: 100%;
-  max-height: 100%;
-  width: 100%;
-  object-fit: cover;
-  object-position: center center;
-  display: block;
-  margin: 0;
-
-  clip-path: polygon(
-  20% 0%,   /* point décalé 10% à droite en haut */
-    100% 0%,  /* coin supérieur droit */
-    100% 100%,/* coin inférieur droit */
-    0% 100%,  /* coin inférieur gauche */
-    0% 100%    /* 10% en bas à gauche */
-  );
-}
-
-    </style>
-
-    <div class="butonTp">
+    <div class="butonTp corectUp">
         <p>Faites le test gratuit pour connaître vos aides solaires.</p>
         <a href="index.html">Connaître mes aides</a>
     </div>
 
     <div class="avisGoogle">
-        <div class="avisGoogleBody fade-text">
+        <div class="avisGoogleBody">
             <h2>NOS CLIENTS <br><span class="AvisTitre">PARLENT DE NOUS</span></h2>
             <div class="AvisBar"></div>
 
