--- a/IteVersionForm/index.html
+++ b/IteVersionForm/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="logo">
-                <img class="logo1" src="./assets/Logo_de_la_République_française_(1999).png" alt="Logo République-Francaise">
+                <img class="logo1" src="./assets/anah.png" alt="Logo République-Francaise">
                 <img class="logo4" src="./assets/Francerelance.png" alt="Logo France-Relance">
                 <img class="logo2" src="./assets/Ma-prime-renov.png" alt="Logo Ma-prime-renov">
                 <img class="logo3" src="./assets/France-renov_Logo.png" alt="Logo France-Renov">
@@ -169,16 +169,13 @@
                         <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" pattern="^\+?[0-9]{9,15}$" title="Le numéro de téléphone doit être valide (10 à 15 chiffres)." required>
                         <input type="email" id="email" name="email" placeholder="Email" title="L'adresse mail doit être valide." required>    <!-- pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" -->
                     </div>
-                </div>
-    
-                <!-- Téléphone -->
-                <!-- <div class="input-container">
-                    <label for="telephone">Votre téléphone et Email pour finaliser la simulation :</label>
-                    <div class="inputInLine">
-                        <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" pattern="^\+?[0-9]{10,15}$" title="Le numéro de téléphone doit être valide (10 à 15 chiffres).">
-                        <input type="email" id="email" name="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="L'adresse mail doit être valide.">
+                    <div style="align-self: center;">
+                        <input type="checkbox" id="consent" name="consent" required style="width: 16px; height: 16px;">
+                        <label for="consent" style="font-size: 14px; color: #202020;">
+                            J'accepte la <a href="politiqueConfidentialite.html" target="_blank" style="color: #202020; text-decoration: underline;">politique de confidentialité</a>.
+                        </label>
                     </div>
-                </div> -->
+                </div>
     
                 <!-- Bouton Suivant -->
                 <button type="button" id="nextBtn">Vérifier mon éligibilité</button>
