Form Pv avec checklist chaque etape fonctionnel adaptation chemin aide ou devis, recherche geoloc fonctionel

--- a/pv/LpForm.html
+++ b/pv/LpForm.html
@@ -277,9 +277,8 @@
                     <p id="loader-text"></p>
                 </div>
 
-
-                <img class="trustPilot fixedheight" src="./assets/trustpilot.png" alt="trustPilot">
                 <div id="checklist-container-Js-annimation"></div>
+                <img class="trustPilot fixedheight" src="./assets/trustpilot.png" alt="trustPilot">
             </form>
         </div>
         </div>
@@ -442,8 +441,7 @@
     <div class="logoAides Up">
         <div class="logoAidesContainer">
             <img class="tva" src="./assets/tva.png" alt="Logo tva 5.5">
-            <img class="anha" src="./assets/anha.png" alt="Logo Anha">
-            <img class="mpr" src="./assets/Ma-prime-renov 1.png" alt="Logo ma prime renov">
+            <img class="anha" src="./assets/RGE.png" alt="Logo Anha">
             <img class="tauxzero" src="./assets/taux0.jpg" alt="Logo pret taux 0">
         </div>
     </div>
