--- a/pv/LpForm.html
+++ b/pv/LpForm.html
@@ -130,7 +130,7 @@
                     </div>
 
                     <div class="input-container selection-step active">
-                        <label>Choisissez votre estimation&nbsp;:</label>
+                        <label>Choisissez votre simulation&nbsp;:</label>
                         <div class="button-group">
                             <button type="button" class="option-btn devisTravaux" data-value="Aides" data-step="0">Mes aides 2025<br>
                                 <!-- <svg style="margin-top: 12px;" xmlns="http://www.w3.org/2000/svg" width="62" height="62" viewBox="500 700 1000 500">
